--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^15.0.2",
     "react-addons-css-transition-group": "^15.0.2",
     "react-dom": "^15.0.2",
+    "sendgrid": "^2.0.0",
     "sequelize": "^3.23.0",
     "superagent": "^1.8.3",
     "vitreum": "^3.2.1"
